--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div class="container m-5 text-center">
-        <h1>🚀 aify</h1>
-        <h3 class="fw-normal">Build your AI-native application in seconds.</h3>
+        <h1 class="fw-bold" style="font-family: 'Arial';">🚀 aify</h1>
+        <h3 class="fw-bold" style="font-family: 'Arial'; color:gray">Build your AI-native application in seconds.</h3>
         <div class="mt-5">
             <a href="https://docs.aify.run">Documentation</a> | 
             <a href="https://github.com/shellc/aify">Github</a> |
