--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="static/css/default.css" rel="stylesheet" />
     <title>AIfy: AI-native application framework and runtime</title>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3QEZ4BHZYC"></script>
     <script>
@@ -27,6 +29,11 @@
             <a href="https://docs.aify.run">Documentation</a> | 
             <a href="https://github.com/shellc/aify">Github</a> |
             <a href="https://github.com/shellc/aify/issues">Feedback</a>
+        </div>
+
+        <div class="mt-3">
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/shellc/aify" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Star shellc/aify on GitHub">Star</a>
         </div>
 
         <div class="col-9 ms-auto me-auto mt-5" >
