--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <div class="container m-5 text-center">
+    <div class="container m-5 text-center ms-auto me-auto">
         <h1 class="fw-bold" style="font-family: 'Arial';">🚀 aify</h1>
         <h3 class="fw-bold" style="font-family: 'Arial'; color:gray">Build your AI-native application in seconds.</h3>
         <div class="mt-5">
