--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="static/css/default.css" rel="stylesheet" />
-    <title>AIfy: AI-native application framework and runtime</title>
+    <title>aify: AI-native application framework and runtime</title>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Google tag (gtag.js) -->
@@ -34,6 +34,10 @@
         <div class="mt-3">
           <!-- Place this tag where you want the button to render. -->
           <a class="github-button" href="https://github.com/shellc/aify" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Star shellc/aify on GitHub">Star</a>
+        </div>
+
+        <div class="mt-3">
+          <a href="https://www.producthunt.com/posts/aify-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-aify&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405357&theme=neutral" alt="aify - AI&#0045;native&#0032;application&#0032;framework&#0032;and&#0032;runtime | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
         </div>
 
         <div class="col-9 ms-auto me-auto mt-5" >
