add link to emoji.aify.run

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             <img class="w-100" style="border: 1px solid #eee; border-radius: 20px;" src="https://docs.aify.run/assets/images/screenshots/aify_webui_screenshot.png" />
         </div>
 
+        <div class="col-9 ms-auto me-auto mt-5" >
+            <h5>🌱 Build with aify:</h5>
+            <a href="https://emoji.aify.run" target="_blank">🫢 Emoji express : Search emojis by semantics</a>
+        </div>
+
         <div class="my-5 small">aify is an open-source project. Welcome distribution.</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
