--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     gtag('config', 'G-3QEZ4BHZYC');
     </script>
-  </head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8714127133780542"
+      crossorigin="anonymous"></script>
+    </head>
   <body>
     <div class="container m-5 text-center ms-auto me-auto">
         <h1 class="fw-bold" style="font-family: 'Arial';">🚀 aify</h1>
