--- a/index.html
+++ b/index.html
@@ -33,32 +33,61 @@
             <a href="https://github.com/shellc/aify/issues">Feedback</a>
         </div>
 
-        <div class="mt-3">
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/shellc/aify" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Star shellc/aify on GitHub">Star</a>
-        </div>
+        <div class="mt-3 d-flex align-items-center">
+          <div class="ms-auto me-3" style="padding-top: 5px;">
+            <!-- Place this tag where you want the button to render. -->
+            <a class="github-button" href="https://github.com/shellc/aify" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Star shellc/aify on GitHub">Star</a>
+          </div>
 
-        <div class="mt-3">
-          <a href="https://www.producthunt.com/posts/aify-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-aify&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405357&theme=neutral" alt="aify - AI&#0045;native&#0032;application&#0032;framework&#0032;and&#0032;runtime | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+          <div class="me-auto">
+            <a href="https://www.producthunt.com/posts/aify-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-aify&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405357&theme=neutral" alt="aify - AI&#0045;native&#0032;application&#0032;framework&#0032;and&#0032;runtime | Product Hunt" height="36" /></a>
+          </div>
+        </div>
+        <div id="carousel" class="carousel carousel-dark slide col-9 ms-auto me-auto mt-4">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3000">
+              <img src="static/images/template.png" class="d-block w-100" style="border: 1px solid #eee; border-radius: 20px;">
+              <div class="carousel-caption d-none d-md-block top-0">
+                <p class="fs-3 fw-bold text-black">🛠️ AI-native application framework and runtime. <br />Simply write a YAML file.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <img src="https://docs.aify.run/assets/images/screenshots/aify_webui_screenshot.png" class="d-block w-100" style="border: 1px solid #eee; border-radius: 20px;">
+              <div class="carousel-caption d-none d-md-block top-0">
+                <p class="fs-3 fw-bold text-black">🤖 Ready-to-use AI chatbot UI.</p>
+              </div>
+            </div>
+
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
 
         <div class="col-9 ms-auto me-auto mt-5" >
-            <h5>🛠️ AI-native application framework and runtime. Simply write a YAML file.<br /></h5>
-            <img class="w-100" style="border: 1px solid #eee; border-radius: 20px;" src="static/images/template.png" />
+            <h4 class="fw-bold">🌱 Build with aify:</h4>
+            <a href="https://emoji.aify.run" target="_blank">😼 Emoji express - Search emojis by semantics.</a>
         </div>
 
-        <div class="col-9 ms-auto me-auto mt-5" >
-            <h5>🤖 Ready-to-use AI chatbot UI.</h5>
-            <img class="w-100" style="border: 1px solid #eee; border-radius: 20px;" src="https://docs.aify.run/assets/images/screenshots/aify_webui_screenshot.png" />
-        </div>
-
-        <div class="col-9 ms-auto me-auto mt-5" >
-            <h5>🌱 Build with aify:</h5>
-            <a href="https://emoji.aify.run" target="_blank">🫢 Emoji express : Search emojis by semantics</a>
-        </div>
-
-        <div class="my-5 small">aify is an open-source project. Welcome distribution.</div>
+        <div class="my-5 small">aify is an open-source project.</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+      const carouselElement = document.querySelector('#carousel')
+
+      const carousel = new bootstrap.Carousel(carouselElement, {
+        interval: 2000,
+        touch: true
+      });
+    </script>
   </body>
 </html>
