--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8714127133780542"
       crossorigin="anonymous"></script>
     </head>
-  <body>
+  <body style="background-color: #eee;">
     <div class="container m-5 text-center ms-auto me-auto">
         <h1 class="fw-bold" style="font-family: 'Arial';">🚀 aify</h1>
         <h3 class="fw-bold" style="font-family: 'Arial'; color:gray">Build your AI-native application in seconds.</h3>
         <div class="mt-5">
-            <a href="https://docs.aify.run">Documentation</a> | 
-            <a href="https://github.com/shellc/aify">Github</a> |
-            <a href="https://github.com/shellc/aify/issues">Feedback</a>
+            <a href="https://docs.aify.run" class="fw-bold">Documentation</a> | 
+            <a href="https://github.com/shellc/aify" class="fw-bold">Github</a> |
+            <a href="https://github.com/shellc/aify/issues" class="fw-bold">Feedback</a>
         </div>
 
         <div class="mt-3 d-flex align-items-center">
@@ -48,15 +48,15 @@
             <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
           </div>
-          <div class="carousel-inner">
+          <div class="carousel-inner" style="border: 2px solid #fff; border-radius: 20px;">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img src="static/images/template.png" class="d-block w-100" style="border: 1px solid #eee; border-radius: 20px;">
+              <img src="static/images/template.png" class="d-block w-100">
               <div class="carousel-caption d-none d-md-block top-0">
                 <p class="fs-3 fw-bold text-black">🛠️ AI-native application framework and runtime. <br />Simply write a YAML file.</p>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img src="https://docs.aify.run/assets/images/screenshots/aify_webui_screenshot.png" class="d-block w-100" style="border: 1px solid #eee; border-radius: 20px;">
+              <img src="https://docs.aify.run/assets/images/screenshots/aify_webui_screenshot.png" class="d-block w-100">
               <div class="carousel-caption d-none d-md-block top-0">
                 <p class="fs-3 fw-bold text-black">🤖 Ready-to-use AI chatbot UI.</p>
               </div>
@@ -75,10 +75,10 @@
 
         <div class="col-9 ms-auto me-auto mt-5" >
             <h4 class="fw-bold">🌱 Build with aify:</h4>
-            <a href="https://emoji.aify.run" target="_blank">😼 Emoji express - Search emojis by semantics.</a>
+            <a href="https://emoji.aify.run" target="_blank"  class="fw-bold">😼 Emoji express - Search emojis by semantics</a>
         </div>
 
-        <div class="my-5 small">aify is an open-source project.</div>
+        <div class="my-5 small"><strong>🚀 aify</strong> under MIT license.</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
