--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body style="background-color: #eee;">
     <div class="container m-5 text-center ms-auto me-auto">
         <h1 class="fw-bold" style="font-family: 'Arial';">🚀 aify</h1>
-        <h3 class="fw-bold" style="font-family: 'Arial'; color:gray">Build your AI-native application in seconds.</h3>
+        <h3 class="fw-bold" style="font-family: 'Arial'; color:gray">Build your AI-native application in seconds</h3>
         <div class="mt-5">
             <a href="https://docs.aify.run" class="fw-bold">Documentation</a> | 
             <a href="https://github.com/shellc/aify" class="fw-bold">Github</a> |
