--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="With aify, you can create your very own AI-powered application effortlessly. Our innovative framework and runtime allow you to bring your ideas to life by simply writing a YAML file. No complex coding required!">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="static/css/default.css" rel="stylesheet" />
-    <title>aify: AI-native application framework and runtime</title>
+    <title>aify: 🚀 AI-native application framework and runtime</title>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!-- Google tag (gtag.js) -->
