--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
             <a href="https://github.com/shellc/aify" class="fw-bold">Github</a> |
             <a href="https://github.com/shellc/aify/issues" class="fw-bold">Feedback</a>
         </div>
-
+        <!--
         <div class="mt-3 d-flex align-items-center">
           <div class="ms-auto me-3" style="padding-top: 5px;">
-            <!-- Place this tag where you want the button to render. -->
             <a class="github-button" href="https://github.com/shellc/aify" data-color-scheme="no-preference: light; light: light; dark: light;" data-size="large" data-show-count="true" aria-label="Star shellc/aify on GitHub">Star</a>
           </div>
 
           <div class="me-auto">
             <a href="https://www.producthunt.com/posts/aify-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-aify&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=405357&theme=neutral" alt="aify - AI&#0045;native&#0032;application&#0032;framework&#0032;and&#0032;runtime | Product Hunt" height="36" /></a>
           </div>
-        </div>
+        </div>-->
         <div id="carousel" class="carousel carousel-dark slide col-9 ms-auto me-auto mt-4">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -75,7 +74,7 @@
 
         <div class="col-9 ms-auto me-auto mt-5" >
             <h4 class="fw-bold">🌱 Build with aify:</h4>
-            <a href="https://emoji.aify.run" target="_blank"  class="fw-bold">😼 Emoji express - Search emojis by semantics</a>
+            <a href="https://emoji.aify.run" target="_blank"  class="fw-bold"><img src="https://emoji.aify.run/apps/static/icon-192x192.png" height="24"/> Emoji express - Search emojis by semantics</a>
         </div>
 
         <div class="my-5 small"><strong>🚀 aify</strong> under MIT license.</div>
